[tool.poetry]
name = "alicebot"
version = "0.1.0"
description = ""
authors = ["MidVC <lutony040720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
